--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "author": "cheese_pizza <xcicada824@gmail.com> (https://github.com/Yuuki221)",
   "license": "MIT",
-  "devDependencies":{
-    "JSONStream": "^1.1.2"
+  "dependencies":{
+    "JSONStream": "~1.1.2"
   }
 }
