--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "index.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,9 @@
   "author": "cheese_pizza <xcicada824@gmail.com> (https://github.com/Yuuki221)",
   "license": "MIT",
   "devDependencies": {
-    "JSONStream": "^1.1.2"
+    "JSONStream": "^1.1.2",
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
